@@ -16,17 +16,12 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-rversion <- function() {
-  paste(R.Version()[c("major", "minor")],
-                                  collapse=".")
-}
-
 recordPlot <- function()
 {
-    if(dev.cur() == 1)
+    if(dev.cur() == 1L)
         stop("no current device to record from")
     res <- .External2(C_getSnapshot)
-    attr(res, "version") <- rversion()
+    attr(res, "pid") <- Sys.getpid()
     class(res) <- "recordedplot"
     res
 }
@@ -36,13 +31,9 @@ replayPlot <- function(x)
     if(!inherits(x, "recordedplot"))
         stop(gettextf("argument is not of class %s", dQuote("recordedplot")),
              domain = NA)
-    nm <- names(x)
-    version <- attr(x, "version") ## added in R 2.0.0.
-    if (is.null(version) || version < as.numeric_version("3.0.0"))
-        stop("loading snapshot from pre-3.0.0 R version")
-    else if (version != rversion())
-        warning(gettext("loading snapshot from different R version"),
-                " (", version, ")", domain = NA)
+    pid <- attr(x, "pid") ## added after R 3.0.2
+    if (is.null(pid) || pid != Sys.getpid())
+        stop("loading snapshot from a different session")
     invisible(.External2(C_playSnapshot, x))
 }
 
